"""create reciter audios table

Revision ID: abb6650a4426
Revises: 15fb01b1f4e1
Create Date: 2024-03-24 14:43:35.283063

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = 'abb6650a4426'
down_revision: Union[str, None] = '15fb01b1f4e1'
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('reciter_audios',
    sa.Column('reciter_id', sa.UUID(), nullable=False),
    sa.Column('ayah_part_id', sa.UUID(), nullable=False),
    sa.Column('audio_link', sa.String(), nullable=False),
    sa.ForeignKeyConstraint(['ayah_part_id'], ['ayah_parts.id'], ),
    sa.ForeignKeyConstraint(['reciter_id'], ['reciters.id'], ),
    sa.PrimaryKeyConstraint('reciter_id', 'ayah_part_id')
    )
    op.create_index('ix_ayah_part_id', 'reciter_audios', ['ayah_part_id'], unique=False)
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_index('ix_ayah_part_id', table_name='reciter_audios')
    op.drop_table('reciter_audios')
    # ### end Alembic commands ###
